--- a/index.html
+++ b/index.html
@@ -421,5 +421,14 @@ function applyWatermark() {
 }
   
 })();</script>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H5RCB4CP7T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H5RCB4CP7T');
+</script>
 </body>
 </html>
