--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@ input[type="text"]{padding:8px 10px;border:1px solid #e5e7eb;border-radius:10px;
 
   render();
 })();
+</script>
 
  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-H5RCB4CP7T"></script>
@@ -291,5 +292,6 @@ input[type="text"]{padding:8px 10px;border:1px solid #e5e7eb;border-radius:10px;
 
   gtag('config', 'G-H5RCB4CP7T');
 </script>
+  
 </body>
 </html>
